--- a/app/src/main/res/layout/activity_update_book.xml
+++ b/app/src/main/res/layout/activity_update_book.xml
@@ -177,7 +177,8 @@
         android:spinnerMode="dropdown"
         app:layout_constraintCircleRadius="5dp"
         app:layout_constraintStart_toEndOf="@+id/txtShareCost"
-        app:layout_constraintTop_toBottomOf="@+id/txtDate" />
+        app:layout_constraintTop_toBottomOf="@+id/txtDate"
+        tools:ignore="DuplicateSpeakableTextCheck" />
 
     <Spinner
         android:id="@+id/shareSpinner2"
