--- a/app/src/main/res/layout/activity_sign_up2.xml
+++ b/app/src/main/res/layout/activity_sign_up2.xml
@@ -30,10 +30,10 @@
         android:minHeight="48dp"
         android:prompt="@string/signUp2_genre_hint"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signUp1_username5" />
+        app:layout_constraintTop_toBottomOf="@+id/signUp2_address" />
 
     <EditText
-        android:id="@+id/signUp1_username5"
+        android:id="@+id/signUp2_address"
         android:layout_width="359dp"
         android:layout_height="0dp"
         android:layout_marginStart="24dp"
@@ -104,7 +104,7 @@
         android:textColorHint="#757575"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signUp1_username5" />
+        app:layout_constraintTop_toBottomOf="@+id/signUp2_address" />
 
     <Button
         android:id="@+id/signUp2_button"
@@ -116,5 +116,16 @@
         android:text="@string/SignUp2_button_text"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signUp2_age" />
+
+    <TextView
+        android:id="@+id/showShareRef"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="70dp"
+        android:layout_marginBottom="128dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/signUp2_button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
