--- a/app/src/main/res/layout/activity_add_book_page.xml
+++ b/app/src/main/res/layout/activity_add_book_page.xml
@@ -75,7 +75,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtBookName" />
 
     <EditText
-        android:id="@+id/txtShareCost"
+        android:id="@+id/txtTotalCost"
         android:layout_width="150dp"
         android:layout_height="51dp"
         android:padding="5dp"
@@ -86,12 +86,12 @@
         android:hint="@string/totalCost"
         android:inputType="number"
         android:textColorHint="#757575"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup"
+        app:layout_constraintStart_toEndOf="@+id/optionsGroup"
         app:layout_constraintTop_toBottomOf="@+id/txtPublication"
         android:importantForAutofill="no" />
 
     <EditText
-        android:id="@+id/txtRentCost"
+        android:id="@+id/txtWeekCost"
         android:layout_width="150dp"
         android:layout_height="51dp"
         android:layout_marginStart="7dp"
@@ -102,12 +102,12 @@
         android:background="@drawable/text_border"
         android:inputType="number"
         android:textColorHint="#757575"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/txtShareCost"
+        app:layout_constraintStart_toEndOf="@+id/optionsGroup"
+        app:layout_constraintTop_toBottomOf="@+id/txtTotalCost"
         android:importantForAutofill="no" />
 
     <RadioGroup
-        android:id="@+id/radioGroup"
+        android:id="@+id/optionsGroup"
         android:layout_width="126dp"
         android:layout_height="193dp"
         android:layout_marginStart="16dp"
@@ -164,5 +164,5 @@
         android:text="@string/btnAdd"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtRentCost" />
+        app:layout_constraintTop_toBottomOf="@+id/txtWeekCost" />
 </androidx.constraintlayout.widget.ConstraintLayout>
