--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -11,7 +11,7 @@
         android:layout_width="179dp"
         android:layout_height="163dp"
         android:layout_marginStart="116dp"
-        android:layout_marginTop="168dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="116dp"
         android:background="@drawable/rounded_button"
         android:text="@string/homepage_addUpdateBook"
@@ -21,7 +21,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/home_text2" />
 
     <Button
         android:id="@+id/home_findBook"
@@ -67,9 +67,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="72dp"
-        android:layout_marginTop="124dp"
+        android:layout_marginTop="14dp"
         android:text="@string/homepage_text2"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/home_text" />
 </androidx.constraintlayout.widget.ConstraintLayout>
