--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,8 +24,9 @@
         android:id="@+id/login_password"
         android:layout_width="359dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="28dp"
+        android:layout_marginEnd="20dp"
         android:autofillHints=""
         android:background="@drawable/text_border"
         android:ems="10"
@@ -35,6 +36,7 @@
         android:textAlignment="center"
         android:textColorHint="#757575"
         android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_username" />
 
@@ -42,10 +44,12 @@
         android:id="@+id/login_button"
         android:layout_width="359dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="44dp"
+        android:layout_marginEnd="20dp"
         android:backgroundTint="#3F51B5"
         android:text="@string/login_button_text"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_showPassword" />
 
@@ -53,12 +57,12 @@
         android:id="@+id/login_signUp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="104dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="20dp"
         android:text="@string/login_signup_text"
         android:textColor="#1976D2"
         android:textIsSelectable="false"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/login_noAccount"
         app:layout_constraintTop_toBottomOf="@+id/login_button" />
 
     <TextView
@@ -66,7 +70,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="24dp"
+        android:layout_marginEnd="26dp"
         android:text="@string/login_showPassword"
         android:textColor="#1976D2"
         android:textIsSelectable="false"
@@ -77,7 +81,7 @@
         android:id="@+id/login_noAccount"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="20dp"
         android:layout_marginEnd="160dp"
         android:text="@string/login_noAccount_text"
         android:textColor="#464749"
@@ -89,8 +93,9 @@
         android:id="@+id/login_username"
         android:layout_width="359dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="80dp"
+        android:layout_marginEnd="20dp"
         android:autofillHints=""
         android:background="@drawable/text_border"
         android:ems="10"
@@ -100,6 +105,7 @@
         android:textAlignment="center"
         android:textColorHint="#757575"
         android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_logo" />
 
