--- a/app/src/main/res/layout/activity_update_book.xml
+++ b/app/src/main/res/layout/activity_update_book.xml
@@ -75,7 +75,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtBookName" />
 
     <EditText
-        android:id="@+id/txtShareCost"
+        android:id="@+id/txtTotalCost"
         android:layout_width="130dp"
         android:layout_height="51dp"
         android:layout_marginStart="7dp"
@@ -87,11 +87,11 @@
         android:inputType="number"
         android:padding="5dp"
         android:textColorHint="#757575"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup"
+        app:layout_constraintStart_toEndOf="@+id/optionsGroup"
         app:layout_constraintTop_toBottomOf="@+id/txtPublication" />
 
     <EditText
-        android:id="@+id/txtRentCost"
+        android:id="@+id/txtWeekCost"
         android:layout_width="130dp"
         android:layout_height="51dp"
         android:layout_marginStart="7dp"
@@ -103,11 +103,11 @@
         android:inputType="number"
         android:padding="5dp"
         android:textColorHint="#757575"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/txtShareCost" />
+        app:layout_constraintStart_toEndOf="@+id/optionsGroup"
+        app:layout_constraintTop_toBottomOf="@+id/txtTotalCost" />
 
     <RadioGroup
-        android:id="@+id/radioGroup"
+        android:id="@+id/optionsGroup"
         android:layout_width="126dp"
         android:layout_height="193dp"
         android:layout_marginStart="16dp"
@@ -164,7 +164,7 @@
         app:backgroundTint="@color/btnColor"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtRentCost" />
+        app:layout_constraintTop_toBottomOf="@+id/txtWeekCost" />
 
     <Spinner
         android:id="@+id/shareSpinner"
@@ -176,7 +176,7 @@
         android:entries="@array/status"
         android:spinnerMode="dropdown"
         app:layout_constraintCircleRadius="5dp"
-        app:layout_constraintStart_toEndOf="@+id/txtShareCost"
+        app:layout_constraintStart_toEndOf="@+id/txtTotalCost"
         app:layout_constraintTop_toBottomOf="@+id/txtDate"
         tools:ignore="DuplicateSpeakableTextCheck" />
 
@@ -190,7 +190,7 @@
         android:entries="@array/status"
         android:spinnerMode="dropdown"
         app:layout_constraintCircleRadius="5dp"
-        app:layout_constraintStart_toEndOf="@+id/txtRentCost"
+        app:layout_constraintStart_toEndOf="@+id/txtWeekCost"
         app:layout_constraintTop_toBottomOf="@+id/shareSpinner" />
 
     <Spinner
@@ -203,6 +203,6 @@
         android:entries="@array/status"
         android:spinnerMode="dropdown"
         app:layout_constraintCircleRadius="5dp"
-        app:layout_constraintStart_toEndOf="@+id/radioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/txtRentCost" />
+        app:layout_constraintStart_toEndOf="@+id/optionsGroup"
+        app:layout_constraintTop_toBottomOf="@+id/txtWeekCost" />
 </androidx.constraintlayout.widget.ConstraintLayout>
