--- a/app/src/main/res/layout/activity_request_book.xml
+++ b/app/src/main/res/layout/activity_request_book.xml
@@ -204,10 +204,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="160dp"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         android:backgroundTint="@color/btnColor"
         android:text="@string/requestBook_send_button"
         android:textSize="18sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/requestBook_message" />
+        app:layout_constraintTop_toBottomOf="@+id/requestBook_message"
+        tools:ignore="TouchTargetSizeCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
