--- a/app/src/main/res/layout/activity_update_book.xml
+++ b/app/src/main/res/layout/activity_update_book.xml
@@ -7,7 +7,7 @@
     tools:context=".UpdateBook">
 
     <EditText
-        android:id="@+id/txtBookName"
+        android:id="@+id/txtUpdate_Title"
         android:layout_width="381dp"
         android:layout_height="51dp"
         android:padding="5dp"
@@ -25,7 +25,7 @@
         android:importantForAutofill="no" />
 
     <EditText
-        android:id="@+id/txtAuthor"
+        android:id="@+id/txtUpdate_Author"
         android:layout_width="125dp"
         android:layout_height="51dp"
         android:layout_marginStart="16dp"
@@ -38,10 +38,10 @@
         android:inputType="textPersonName"
         android:textColorHint="#757575"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtBookName" />
+        app:layout_constraintTop_toBottomOf="@+id/txtUpdate_Title" />
 
     <EditText
-        android:id="@+id/txtPublication"
+        android:id="@+id/txtUpdate_Publication"
         android:layout_width="125dp"
         android:layout_height="51dp"
         android:layout_marginStart="8dp"
@@ -53,11 +53,11 @@
         android:importantForAutofill="no"
         android:inputType="textPersonName"
         android:textColorHint="#757575"
-        app:layout_constraintStart_toEndOf="@+id/txtAuthor"
-        app:layout_constraintTop_toBottomOf="@+id/txtBookName" />
+        app:layout_constraintStart_toEndOf="@+id/txtUpdate_Author"
+        app:layout_constraintTop_toBottomOf="@+id/txtUpdate_Title" />
 
     <EditText
-        android:id="@+id/txtDate"
+        android:id="@+id/txtUpdate_Year"
         android:layout_width="115dp"
         android:layout_height="51dp"
         android:layout_marginStart="8dp"
@@ -71,8 +71,8 @@
         android:inputType="date"
         android:textColorHint="#757575"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/txtPublication"
-        app:layout_constraintTop_toBottomOf="@+id/txtBookName" />
+        app:layout_constraintStart_toEndOf="@+id/txtUpdate_Publication"
+        app:layout_constraintTop_toBottomOf="@+id/txtUpdate_Title" />
 
     <EditText
         android:id="@+id/txtTotalCost"
@@ -88,7 +88,7 @@
         android:padding="5dp"
         android:textColorHint="#757575"
         app:layout_constraintStart_toEndOf="@+id/optionsGroup"
-        app:layout_constraintTop_toBottomOf="@+id/txtPublication" />
+        app:layout_constraintTop_toBottomOf="@+id/txtUpdate_Publication" />
 
     <EditText
         android:id="@+id/txtWeekCost"
@@ -113,10 +113,10 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/txtAuthor">
+        app:layout_constraintTop_toBottomOf="@+id/txtUpdate_Author">
 
         <RadioButton
-            android:id="@+id/rdShareBtn"
+            android:id="@+id/rdUpdate_ShareBtn"
             android:layout_width="match_parent"
             android:layout_height="51dp"
             android:background="@drawable/radio_selected"
@@ -128,7 +128,7 @@
             tools:ignore="DuplicateSpeakableTextCheck" />
 
         <RadioButton
-            android:id="@+id/rdRent"
+            android:id="@+id/rdUpdate_Rent"
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="51dp"
@@ -140,7 +140,7 @@
             android:textColor="#D7CCC8" />
 
         <RadioButton
-            android:id="@+id/rdGiveAway"
+            android:id="@+id/rdUpdate_GiveAway"
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="51dp"
@@ -153,7 +153,7 @@
     </RadioGroup>
 
     <Button
-        android:id="@+id/btnAdd"
+        android:id="@+id/btn_Update_Book"
         android:layout_width="381dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="162dp"
@@ -177,7 +177,7 @@
         android:spinnerMode="dropdown"
         app:layout_constraintCircleRadius="5dp"
         app:layout_constraintStart_toEndOf="@+id/txtTotalCost"
-        app:layout_constraintTop_toBottomOf="@+id/txtDate"
+        app:layout_constraintTop_toBottomOf="@+id/txtUpdate_Year"
         tools:ignore="DuplicateSpeakableTextCheck" />
 
     <Spinner
@@ -194,7 +194,7 @@
         app:layout_constraintTop_toBottomOf="@+id/shareSpinner" />
 
     <Spinner
-        android:id="@+id/shareSpinner3"
+        android:id="@+id/avail_or_Not"
         android:layout_width="110dp"
         android:layout_height="51dp"
         android:layout_marginStart="7dp"
