--- a/app/src/main/res/layout/activity_find_book.xml
+++ b/app/src/main/res/layout/activity_find_book.xml
@@ -8,21 +8,51 @@
 
     <TextView
         android:id="@+id/findBook_label"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAlignment="center"
+        android:layout_marginTop="100dp"
+        android:text="@string/findBook_label"
+        android:textColor="@color/black"
+        android:textSize="20sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <EditText
+        android:id="@+id/editTextTextPersonName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="84dp"
-        android:layout_marginTop="104dp"
-        android:text="@string/findBook_label"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="46dp"
+        android:autofillHints=""
         android:textSize="18sp"
+        android:ems="10"
+        android:hint="@string/findBook_hint_postal_code"
+        android:inputType="textPersonName"
+        android:minHeight="48dp"
+        android:textColorHint="#757575"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btnSearch"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="29dp"
+        android:textSize="18sp"
+        android:text="@string/findBook_BTN_Search"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/findBook_RecyclerView"
+        android:id="@+id/availBook_RecycleView"
         android:layout_width="409dp"
-        android:layout_height="602dp"
-        android:layout_marginTop="9dp"
+        android:layout_height="474dp"
+        android:layout_marginTop="19dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/findBook_label" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
