--- a/app/src/main/res/layout/activity_reading_tracker.xml
+++ b/app/src/main/res/layout/activity_reading_tracker.xml
@@ -24,6 +24,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <ListView
+        android:id="@+id/bookArrayList"
         android:layout_width="377dp"
         android:layout_height="507dp"
         android:layout_marginStart="15dp"
