--- a/app/src/main/res/layout/activity_update_book.xml
+++ b/app/src/main/res/layout/activity_update_book.xml
@@ -75,7 +75,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtUpdate_Title" />
 
     <EditText
-        android:id="@+id/txtTotalCost"
+        android:id="@+id/txtRentPrice"
         android:layout_width="130dp"
         android:layout_height="51dp"
         android:layout_marginStart="7dp"
@@ -104,7 +104,7 @@
         android:padding="5dp"
         android:textColorHint="#757575"
         app:layout_constraintStart_toEndOf="@+id/optionsGroup"
-        app:layout_constraintTop_toBottomOf="@+id/txtTotalCost" />
+        app:layout_constraintTop_toBottomOf="@+id/txtRentPrice" />
 
     <RadioGroup
         android:id="@+id/optionsGroup"
@@ -116,7 +116,7 @@
         app:layout_constraintTop_toBottomOf="@+id/txtUpdate_Author">
 
         <RadioButton
-            android:id="@+id/rdUpdate_ShareBtn"
+            android:id="@+id/rd_ShareBtn"
             android:layout_width="match_parent"
             android:layout_height="51dp"
             android:background="@drawable/radio_selected"
@@ -128,7 +128,7 @@
             tools:ignore="DuplicateSpeakableTextCheck" />
 
         <RadioButton
-            android:id="@+id/rdUpdate_Rent"
+            android:id="@+id/rd_Rent"
             android:textStyle="bold"
             android:layout_width="match_parent"
             android:layout_height="51dp"
@@ -153,7 +153,7 @@
     </RadioGroup>
 
     <Button
-        android:id="@+id/btn_Update_Book"
+        android:id="@+id/btnAddNewBook"
         android:layout_width="381dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="162dp"
@@ -176,7 +176,7 @@
         android:entries="@array/status"
         android:spinnerMode="dropdown"
         app:layout_constraintCircleRadius="5dp"
-        app:layout_constraintStart_toEndOf="@+id/txtTotalCost"
+        app:layout_constraintStart_toEndOf="@+id/txtRentPrice"
         app:layout_constraintTop_toBottomOf="@+id/txtUpdate_Year"
         tools:ignore="DuplicateSpeakableTextCheck" />
 
